hphp/hack/test/typecheck/attributes/memoize_lsb_typesplat.php.exp
ERROR: File "memoize_lsb_typesplat.php", line 6, characters 35-39:
Memoized functions cannot be variadic or use the type-splat operator. (NastCheck[3086])
